--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
-body {
+@import url('https://fonts.googleapis.com/css?family=Epilogue');
+
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html, body {
+  height: 100%;
+}
+
+body {
+  font-family: 'Epilogue';
+  font-size: 18px;
+  font-weight: 500;
+  background: hsl(0, 0%, 98%);
 }
